--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@types/node": "10.12.2",
     "@types/react": "16.4.18",
     "@types/react-dom": "16.0.9",
+    "@types/react-leaflet": "^1.1.6",
+    "leaflet": "^1.3.4",
+    "leaflet.markercluster": "^1.4.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-leaflet": "^2.1.1",
+    "react-leaflet-markercluster": "^2.0.0-rc3",
     "react-scripts": "2.1.1",
     "typescript": "3.1.6"
   },
