--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "musees-de-france",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "http://rap2hpoutre.github.io/museomap",
   "dependencies": {
     "@types/jest": "23.3.9",
     "@types/node": "10.12.2",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +35,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
